# GraDual

./: .gitignore  README.md  pyproject.toml
FlowBench/: README.md  __init__.py  run_full.py  run_pilot.py
FlowBench/framework/: __init__.py  attack_templates.py  graders.py  oracle.py  runner.py  task_spec.py  variant_gen.py
FlowBench/scenarios/: __init__.py  banking_g1.py  banking_g2.py  email_g1.py  email_g3.py  homework_g3.py  slack_g3.py  web_g2.py
FlowBench/web_mock/: __init__.py  browser.py
examples/: run_single_case.py
run/: data_module.py  quick_eval.py
src/agentdojo/: benchmark.py  models.py
src/agentdojo/agent_pipeline/: __init__.py  agent_pipeline.py  basic_elements.py  endorsement_oracle.py  tool_execution.py  utility_tools.py
src/agentdojo/agent_pipeline/llms/: grade_dual_llm.py  openai_llm.py  prompting_llm.py
src/agentdojo/attacks/: __init__.py  agentic_attacks.py  baseline_attacks.py  important_instructions_attacks.py
src/agentdojo/data/: system_messages.yaml
src/agentdojo/data/suites/banking/: environment.yaml
src/agentdojo/default_suites/v1/slack/: user_tasks.py
src/agentdojo/default_suites/v1/tools/: slack.py  tool_white_list.py  web.py
src/agentdojo/default_suites/v1/travel/: user_tasks.py
src/agentdojo/default_suites/v1_1/travel/: user_tasks.py
src/agentdojo/task_suite/: task_suite.py
